PHP CS Fixer and Larastan
