# app/Http/Resources/Api/V1/BackgroundSkinResource.php
@@ -14,8 +14,9 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     description="A background skin available in the API",
  *
  *     @OA\Property(property="id",    type="integer", example=1),
- *     @OA\Property(property="name",  type="string",  example="Sunset"),
- *     @OA\Property(property="value", type="number",  format="float", example=0.5000)
+ *     @OA\Property(property="name",  type="string",  example="Intersteller"),
+ *     @OA\Property(property="value", type="number",  format="float", example=0.5000),
+ *     @OA\Property(property="eventName",  type="string",  example="Intersteller"),
  * )
  *
  * @mixin BackgroundSkin
@@ -29,9 +30,10 @@ class BackgroundSkinResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'id'    => $this->id,
-            'name'  => $this->name,
-            'value' => $this->value,
+            'id'        => $this->id,
+            'name'      => $this->name,
+            'value'     => $this->value,
+            'eventName' => $this->eventName,
         ];
     }
 }
